Add structure and partials

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,5 +20,16 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
     <title>Módulo 1 - Evaluación final</title>
   </head>
-  <body></body>
+  <body>
+    <!--Header-->
+    <include src="./partials/header.html"></include>
+    <main>
+      <!--Beige Main-->
+      <include src="./partials/beige-main.html"></include>
+      <!--Mixed Main-->
+      <include src="./partials/mixed-main.html"></include>
+    </main>
+    <!--Footer-->
+    <include src="./partials/footer.html"></include>
+  </body>
 </html>
